inner link added

--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
 </head>
 <body>
 
-	<div class="wrap">
-		<div class="sim" contenteditable="true" data-text="enter the text here..."></div>
-		<div class="error hidden">bad</div>
-		<a href="" class="answer">Ответить</a>
-	</div>
-
-	<div class="wrap">
-		<div class="sim" contenteditable="true" data-text="enter the text here..."></div>
-		<div class="error hidden">bad</div>
-		<a href="" class="answer">Ответить</a>
-	</div>
+	<a href="/mySite" class="ref"></a>
 
 	<style>
 		[contentEditable=true]:empty:not(:focus):before{
