--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<a href="/mySite" class="ref"></a>
+	<a href="/mySite" class="ref">inner link</a>
 
 	<style>
 		[contentEditable=true]:empty:not(:focus):before{
