open vebinar project added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
+	<a href="/open-vebinar">Open vebinar</a>
 	<a href="/mySite" class="ref">inner link</a>
+
 
 	<style>
 		[contentEditable=true]:empty:not(:focus):before{
