--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -11,6 +11,10 @@
       <div class="left__block-header">Открытый вебинар</div>
       <div class="left__block-wrap">
         <div class="left__block-form_title">Зарегистрироваться на вебинар</div>
+        <div class="left__block-form_desc">
+          <p class="left__block-form_desc-item"><sup>*</sup>Обязательно подтвердите email на почте</p>
+          <p class="left__block-form_desc-item"><sup>*</sup>Количество мест ограничено</p>
+        </div>
         <div class="left__block-form">
           <input type="text" name="name" placeholder="Имя" class="form__name form-item"/>
           <input type="text" name="name" placeholder="Фамилия" class="form__surname form-item"/>
@@ -31,15 +35,36 @@
           <p>или </p>
           <p>Что требуется от Frontend-разработчика, чтобы на нее устроиться?</p>
         </div>
-        <div class="right__block-text"><b>10 декабря в 16.00</b> с вами бесплатно поделятся реальным опытом люди, которые уже получили ответ на этот вопрос – <b>разработчик «ВКонтакте» Тимофей Чаптыков</b> и <b>разработчик Mail.ru Дарья Пушкарская</b>.</div>
+        <div class="right__block-text"><b class="right__block-text_bold">18 декабря в 16.00</b> с вами <b class="right__block-text_bold">бесплатно</b> поделятся реальным опытом люди, которые уже получили ответ на этот вопрос – <b class="right__block-text_bold">разработчик "ВКонтакте" Тимофей Чаптыков</b> и <b class="right__block-text_bold">разработчик Mail.ru Дарья Пушкарская</b>.</div>
         <div class="right__block-text"> 
-          <div class="text-head">Участвуйте в нашем открытом вебинаре и вы узнаете:</div>
+          <div class="text-head">Зарегистрируйтесь в форме слева на открытый вебинар и вы узнаете:</div>
           <ol class="right__block-text-list">
             <li class="right__block-text-item">какими технологиями нужно владеть в обязательном порядке</li>
             <li class="right__block-text-item">как составить резюме, чтобы повысить свои шансы на трудоустройство</li>
             <li class="right__block-text-item">какие работы представить в портфолио</li>
             <li class="right__block-text-item">как подготовиться к собеседованию и пройти его</li>
           </ol>
+        </div>
+        <div class="right__block-speakers">
+          <div class="right__block-speakers-title">Ведущие вебинара:</div>
+          <div class="speakers">
+            <div class="speaker">
+              <div class="wrap-imga">
+                <div class="img-wrap"><img src="/assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
+              </div>
+              <p class="speaker-title">Тимофей Чаптыков</p>
+              <p class="speaker-description"><b>Ранее:</b> победитель Всероссийских Дельфийских игр в номинации "Веб-дизайн",  сооснователь красноярского коворкинг-кафе "Фургон", работал в digital-агентстве SmartHeart и компании 2ГИС.</p>
+              <p class="speaker-description"><b>В настоящее время:</b> разработчик "ВКонтакте".</p>
+            </div>
+            <div class="speaker">
+              <div class="wrap-imga">
+                <div class="img-wrap"><img src="/assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
+              </div>
+              <p class="speaker-title">Дарья Пушкарская</p>
+              <p class="speaker-description"><b>Ранее:</b> работала разработчиком интерфейсов в компании 2ГИС, а также преподавателем и наставником в школе LoftSchool.</p>
+              <p class="speaker-description"><b>В настоящее время:</b> программист Mail.ru.</p>
+            </div>
+          </div>
         </div>
         <div class="right__block-text-wrap">
           <div class="right__block-desc"> 
@@ -49,27 +74,6 @@
           <div class="right__block-desc"> 
             <div class="right__block-desc-title">На вебинаре о своем опыте расскажут люди, которые самостоятельно прошли весь путь с самого начала</div>
             <p>Если вам не хватает компетенций, и вы тонете в море представленной в интернете информации, они расскажут, как ускорить свое обучение и выйти на конкурентный уровень. Если у вас в портфолио уже достаточно крутых проектов, но вам до сих пор не повезло с трудоустройством, вы узнаете о том, как правильно составить резюме и максимизировать свои шансы. Наконец, вы сможете задать свои вопросы и гарантированно получить ответы на них!</p>
-          </div>
-        </div>
-        <div class="right__block-speakers"> 
-          <div class="right__block-speakers-title">Ведущие вебинара:</div>
-          <div class="speakers">
-            <div class="speaker">
-              <div class="wrap-imga">
-                <div class="img-wrap"><img src="./assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
-              </div>
-              <p class="speaker-title">Тимофей Чаптыков</p>
-              <p class="speaker-description"><b>Ранее:</b> победитель Всероссийских Дельфийских игр в номинации «Веб-дизайн»,  сооснователь красноярского коворкинг-кафе «Фургон», работал в digital-агентстве SmartHeart и компании 2ГИС.</p>
-              <p class="speaker-description"><b>В настоящее время:</b> разработчик «ВКонтакте».</p>
-            </div>
-            <div class="speaker">
-              <div class="wrap-imga">
-                <div class="img-wrap"><img src="./assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
-              </div>
-              <p class="speaker-title">Дарья Пушкарская</p>
-              <p class="speaker-description"><b>Ранее:</b> работала разработчиком интерфейсов в компании 2ГИС, а также преподавателем и наставником в школе LoftSchool.</p>
-              <p class="speaker-description"><b>В настоящее время:</b> программист Mail.ru. </p>
-            </div>
           </div>
         </div>
       </div>
