--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -15,16 +15,20 @@
           <p class="left__block-form_desc-item"><sup>*</sup>Обязательно подтвердите email на почте</p>
           <p class="left__block-form_desc-item"><sup>*</sup>Количество мест ограничено</p>
         </div>
-        <div class="left__block-form">
-          <input type="text" name="name" placeholder="Имя" class="form__name form-item"/>
-          <input type="text" name="name" placeholder="Фамилия" class="form__surname form-item"/>
+        <form method="POST" action="http://cp.unisender.com/ru/subscribe?hash=5gak6ycfo943mbeo3q4qr78upmcmswtxhzcyenhkcbp6quk1894oo" name="subscribtion_form" target="_blank" class="left__block-form">
+          <input type="text" name="f_5391861" placeholder="Имя" class="form__name form-item"/>
+          <input type="text" name="f_5391865" placeholder="Фамилия" class="form__surname form-item"/>
           <input type="email" name="email" placeholder="Е-mail" class="form__email form-item"/>
           <button type="submit" class="form__submit">Зарегистрироваться!</button>
-        </div>
+          <input type="hidden" name="charset" value="UTF-8"/>
+          <input type="hidden" name="default_list_id" value="8412415"/>
+          <input type="hidden" name="overwrite" value="2"/>
+          <input type="hidden" name="is_v5" value="1"/>
+        </form>
       </div>
       <div class="left__block-footer">
         <ul class="footer__socials">
-          <li class="footer__socials"><a href="#" target="_blank" class="footer__social-link"><span class="fa">&#xf189;</span></a></li>
+          <li class="footer__socials"><a href="https://vk.com/event134409801" target="_blank" class="footer__social-link"><span class="fa">&#xf189;</span></a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +41,7 @@
         </div>
         <div class="right__block-text"><b class="right__block-text_bold">18 декабря в 16.00</b> с вами <b class="right__block-text_bold">бесплатно</b> поделятся реальным опытом люди, которые уже получили ответ на этот вопрос – <b class="right__block-text_bold">разработчик "ВКонтакте" Тимофей Чаптыков</b> и <b class="right__block-text_bold">разработчик Mail.ru Дарья Пушкарская</b>.</div>
         <div class="right__block-text"> 
-          <div class="text-head">Зарегистрируйтесь в форме слева на открытый вебинар и вы узнаете:</div>
+          <div class="text-head">Зарегистрируйся в форме слева на открытый вебинар и вы узнаете:</div>
           <ol class="right__block-text-list">
             <li class="right__block-text-item">какими технологиями нужно владеть в обязательном порядке</li>
             <li class="right__block-text-item">как составить резюме, чтобы повысить свои шансы на трудоустройство</li>
@@ -50,7 +54,7 @@
           <div class="speakers">
             <div class="speaker">
               <div class="wrap-imga">
-                <div class="img-wrap"><img src="./assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
+                <div class="img-wrap"><img src="/assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
               </div>
               <p class="speaker-title">Тимофей Чаптыков</p>
               <p class="speaker-description"><b>Ранее:</b> победитель Всероссийских Дельфийских игр в номинации "Веб-дизайн",  сооснователь красноярского коворкинг-кафе "Фургон", работал в digital-агентстве SmartHeart и компании 2ГИС.</p>
@@ -58,7 +62,7 @@
             </div>
             <div class="speaker">
               <div class="wrap-imga">
-                <div class="img-wrap"><img src="./assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
+                <div class="img-wrap"><img src="/assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
               </div>
               <p class="speaker-title">Дарья Пушкарская</p>
               <p class="speaker-description"><b>Ранее:</b> работала разработчиком интерфейсов в компании 2ГИС, а также преподавателем и наставником в школе LoftSchool.</p>
