--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -54,7 +54,7 @@
           <div class="speakers">
             <div class="speaker">
               <div class="wrap-imga">
-                <div class="img-wrap"><img src="/assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
+                <div class="img-wrap"><img src="./assets/img/timofey2.png" alt=""/></div><a href="https://vk.com/tim.chaptykov" target="_blank"><span class="fa">&#xf189;</span></a>
               </div>
               <p class="speaker-title">Тимофей Чаптыков</p>
               <p class="speaker-description"><b>Ранее:</b> победитель Всероссийских Дельфийских игр в номинации "Веб-дизайн",  сооснователь красноярского коворкинг-кафе "Фургон", работал в digital-агентстве SmartHeart и компании 2ГИС.</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="speaker">
               <div class="wrap-imga">
-                <div class="img-wrap"><img src="/assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
+                <div class="img-wrap"><img src="./assets/img/dasha2.jpg" alt=""/></div><a href="https://vk.com/d_pushkarskaya" target="_blank"><span class="fa">&#xf189;</span></a>
               </div>
               <p class="speaker-title">Дарья Пушкарская</p>
               <p class="speaker-description"><b>Ранее:</b> работала разработчиком интерфейсов в компании 2ГИС, а также преподавателем и наставником в школе LoftSchool.</p>
