filetree structure modified

--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 
-	<a href="/open-vebinar">Open vebinar</a>
-	<a href="/homeworks" class="ref">Home works</a>
+	<a href="./mySite" class="ref">inner link</a>
 
 
 	<style>
