added divs for links

--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<a href="./mySite" class="ref">inner link</a>
+	<div><a href="./mySite" class="ref">inner link</a></div>
 
 
 	<style>
