--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-	<a href="/open-vebinar">Open vebinar</a>
-	<a href="/homeworks" class="ref">Home works</a>
+	<div><a href="/open-vebinar">Open vebinar</a></div>
+	<div><a href="/homeworks" class="ref">Home works</a></div>
 
 
 	<style>
