--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -2,7 +2,7 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8"/>
-  <title>Main page</title>
+  <title>Open Vebinar</title>
   <link href="assets/css/index.css" rel="stylesheet"/>
 </head>
 <body>
@@ -84,3 +84,33 @@
     </div>
   </div>
 </body>
+
+<!-- <!— Yandex.Metrika counter —> -->
+<script type="text/javascript">
+(function (d, w, c) {
+(w[c] = w[c] || []).push(function() {
+try {
+w.yaCounter41328989 = new Ya.Metrika({
+id:41328989,
+clickmap:true,
+trackLinks:true,
+accurateTrackBounce:true,
+webvisor:true
+});
+} catch(e) { }
+});
+
+var n = d.getElementsByTagName("script")[0],
+s = d.createElement("script"),
+f = function () { n.parentNode.insertBefore(s, n); };
+s.type = "text/javascript";
+s.async = true;
+s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+if (w.opera == "[object Opera]") {
+d.addEventListener("DOMContentLoaded", f, false);
+} else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/41328989" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- <!— /Yandex.Metrika counter —> -->
