--- a/homeworks/2livesvg.html
+++ b/homeworks/2livesvg.html
@@ -8,11 +8,10 @@
 <body>
   <div class="wrapper">
     <div class="container">
-      <div class="block editor ui-widget-content">Drag me!
-        <textarea id="editor">
-          <svg width="60" height="60" xmlns="http://www.w3.org/2000/svg">
-            <ellipse fill="#00FF00" stroke="#000000" opacity="0.4" stroke-width="5" cx="30" cy="30" rx="20" ry="20"></ellipse>
-          </svg>
+      <div class="block editor ui-widget-content"> 
+        <div class="block_title">Drag me!</div>
+        <textarea rows="10" cols="50" id="editor">
+          <svg width="130" height="130" xmlns="http://www.w3.org/2000/svg"><path id="heart" d="M100 34.976c0 8.434-3.635 16.019-9.423 21.274h0.048l-31.25 31.25c-3.125 3.125-6.25 6.25-9.375 6.25s-6.25-3.125-9.375-6.25l-31.202-31.25c-5.788-5.255-9.423-12.84-9.423-21.274 0-15.865 12.861-28.726 28.726-28.726 8.434 0 16.019 3.635 21.274 9.423 5.255-5.788 12.84-9.423 21.274-9.423 15.865 0 28.726 12.861 28.726 28.726z" fill="crimson"/></svg>
         </textarea><a href="index.html" class="button_back">BACK</a>
       </div>
     </div>
