--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -10,22 +10,22 @@
     <div class="container">
       <div class="block">
         <div class="block__title">MathML</div>
-        <div class="block__desc">Let's see the formula on the MathML language!</div><a href="./1mathML.html" target="_blank" class="block__button"> 
+        <div class="block__desc">Let's see the formula on the MathML language!</div><a href="./1mathml.html" class="block__button"> 
           <div class="block__link-text">Get it!</div></a>
       </div>
       <div class="block">
         <div class="block__title">Live SVG</div>
-        <div class="block__desc">Let's create individual background with the help online SVG editor!</div><a href="./2livesvg.html" target="_blank" class="block__button"> 
+        <div class="block__desc">Let's create individual background with the help online SVG editor!</div><a href="./2livesvg.html" class="block__button"> 
           <div class="block__link-text">Get it!</div></a>
       </div>
       <div class="block">
         <div class="block__title">Parser</div>
-        <div class="block__desc">Let's check the line of brackets for compliance of correct sequence!</div><a href="./3parser.html" target="_blank" class="block__button"> 
+        <div class="block__desc">Let's check the line of brackets for compliance of correct sequence!</div><a href="./3parser.html" class="block__button"> 
           <div class="block__link-text">Get it!</div></a>
       </div>
       <div class="block">
         <div class="block__title">Get JSON</div>
-        <div class="block__desc">Let's get the content of the JSON file!</div><a href="./4getjson.html" target="_blank" class="block__button"> 
+        <div class="block__desc">Let's get the content of the JSON file with any structure! Function is universal!</div><a href="./4getjson.html" class="block__button"> 
           <div class="block__link-text">Get it!</div></a>
       </div>
     </div>
