required deleted from input email

--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -18,7 +18,7 @@
         <form method="POST" action="http://cp.unisender.com/ru/subscribe?hash=5gak6ycfo943mbeo3q4qr78upmcmswtxhzcyenhkcbp6quk1894oo" name="subscribtion_form" target="_blank" class="left__block-form">
           <input type="text" name="f_5391861" placeholder="Имя" required="required" class="form__name form-item"/>
           <input type="text" name="f_5391865" placeholder="Фамилия" required="required" class="form__surname form-item"/>
-          <input type="email" name="email" placeholder="Е-mail" required="required" class="form__email form-item"/>
+          <input type="email" name="email" placeholder="Е-mail" class="form__email form-item"/>
           <button type="submit" class="form__submit">Зарегистрироваться!</button>
           <input type="hidden" name="charset" value="UTF-8"/>
           <input type="hidden" name="default_list_id" value="8412415"/>
