script yandex metrika added to index.jade

--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -84,6 +84,7 @@
     </div>
   </div>
 </body>
+<script src="assets/js/app.js"></script>
 <noscript>
   <div src="https://mc.yandex.ru/watch/41441914" style="position:absolute; left:-9999px;" alt="" class="img"></div>
 </noscript>
