--- a/open-vebinar/index.html
+++ b/open-vebinar/index.html
@@ -84,6 +84,31 @@
   </div>
 </body>
 <script src="assets/js/app.js"></script>
+<script>
+  (function (d, w, c) {
+  (w[c] = w[c] || []).push(function() {
+  	try {
+  		w.yaCounter41441914 = new Ya.Metrika({
+  			id:41441914,
+  			clickmap:true,
+  			trackLinks:true,
+  			accurateTrackBounce:true
+  		});
+  	} catch(e) { }
+  });
+  
+  var n = d.getElementsByTagName("script")[0],
+  	s = d.createElement("script"),
+  	f = function () { n.parentNode.insertBefore(s, n); };
+  s.type = "text/javascript";
+  s.async = true;
+  s.src = "https://mc.yandex.ru/metrika/watch.js";
+  
+  if (w.opera == "[object Opera]") {
+  	d.addEventListener("DOMContentLoaded", f, false);
+  } else { f(); }
+  })(document, window, "yandex_metrika_callbacks");
+</script>
 <noscript>
   <div src="https://mc.yandex.ru/watch/41441914" style="position:absolute; left:-9999px;" alt="" class="img"></div>
 </noscript>
